syntax = "proto3";
package kratos.api;

option go_package = "user-srv/internal/conf;conf";

import "google/protobuf/duration.proto";

message Bootstrap {
  Server server = 1;
  Data data = 2;
  Service service=3;
}

message Server {
  message HTTP {
    string network = 1;
    string addr = 2;
    google.protobuf.Duration timeout = 3;
  }
  message GRPC {
    string network = 1;
    string addr = 2;
    google.protobuf.Duration timeout = 3;
  }
  HTTP http = 1;
  GRPC grpc = 2;
}

message Data {
  message Database {
    string driver = 1;
    string source = 2;
  }
  message Redis {
    string network = 1;
    string addr = 2;
    google.protobuf.Duration read_timeout = 3;
    google.protobuf.Duration write_timeout = 4;
  }
  message Rabbit{
    string addr=1;
  }
  message Etcd {
    string addr=1;
  }
  message Consul{
    string addr=1;
  }
  Rabbit rabbit=3;
  Database database = 1;
  Redis redis = 2;
  Etcd etcd=4;
  Consul consul=5;
  string user=6;
  string host=7;
  string pwd=8;
  string odEndpoint=9;
}

message Service{

}